<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <CheckBox
        android:id="@+id/fast_scan_enable_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/scheduled_fast_scan_setting_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/scheduler_options_text" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp">

        <RadioButton
            android:id="@+id/hourly_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_option_hourly" />

        <RadioButton
            android:id="@+id/daily_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_option_daily" />

        <RadioButton
            android:id="@+id/weekly_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_option_weekly" />

        <RadioButton
            android:id="@+id/monthly_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_option_monthly" />
    </RadioGroup>
</LinearLayout>